--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ header nav {
 
 nav ul {
   padding: 0px;
-  margin: 40px 40px 0 0;
+  margin: 40px 0 0 0;
+}
 
+nav ul li {
+  display: inline;
+  margin-right: 10px;
 }
